<resources>
    <string name="app_name">Notifications</string>
    <string name="action_settings">Settings</string>

    <string name="max_priority">Max Priority</string>
    <string name="high_priority">High Priority</string>
    <string name="default_priority">Default Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="min_priority">Min Priority</string>
    <string name="random_priority">Random Priority</string>
    <string name="big_text">Big Text</string>
    <string name="title">Android Notifications</string>
    <string name="old">Old Notifications</string>
    <string name="big_picture">Big Picture</string>
    <string name="inbox_type">Inbox Type</string>
    <string name="summary_text">Water. Earth. Fire. Air. Long ago, the four nations lived
        together in harmony. Then, everything changed when the Fire Nation attacked. Only
        the Avatar, master of all four elements, could stop them, but when the world needed
        him most, he vanished. A hundred years passed and my brother and I discovered the new
        Avatar, an airbender named Aang. And although his airbending skills are great, he has
        a lot to learn before he\'s ready to save anyone. But I believe Aang can save the
        world.</string>



</resources>
